Change a bunch of exheres

--- a/metadata/categories.conf
+++ b/metadata/categories.conf
@@ -1,5 +1,6 @@
 app-admin
 ss-libs
+dev-java
 sys-apps
 mail-client
 net-im
@@ -10,3 +11,4 @@ dev-util
 app-virtualization
 dev-python
 dev-tex
+x11-monitoring
